apps/homepage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  parentRefs:
    - name: shared
      namespace: gateway
      sectionName: https
  hostnames:
  - net.ecksd.ee
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: homepage
      port: 3000
